<resources>
    <string name="app_name">nTune</string>

    <string name="btn_scan">"Find EON"</string>

    <string name="btn_comma3">"Comma 3"</string>

    <string name="format_scan_success">"Found EON: %s"</string>
    <string name="scan_fail">"Couldn't find EON."</string>

    <string name="btn_copy">"Copy"</string>
    <string name="connected_exception_capture">"Connected !!"</string>

    <string name="optional">"Optional"</string>

    <string name="btn_connect_exception_capture">"Crash Log"</string>
    <string name="btn_connect_general">"General"</string>
    <string name="btn_connect_torque">"Torque"</string>
    <string name="btn_connect_indi">"INDI"</string>
    <string name="btn_connect_scc">"SCC"</string>

    <string name="btn_git_account">"Git Account"</string>

    <string name="btn_clear_addresses">"Remove All"</string>
    <string name="confirm_clear_addresses">"Are you sure you want to remove all?"</string>

    <string name="btn_enable">"Enable"</string>
    <string name="btn_reset">"Reset"</string>
    <string name="btn_decrease">"Decrease (-)"</string>
    <string name="btn_increase">"Increase (+)"</string>

    <string name="btn_move_to_left">"Move to Left (-)"</string>
    <string name="btn_move_to_right">"Move to Right (+)"</string>

    <string name="general_use_live_sr">"Use the live steerRatio rather than a fixed value."</string>
    <string name="torque_live_params">"Use auto-tune."</string>


    <string name="conf_load_failed">"The configuration file could not be loaded from EON.
You must be connected to the panda at least once."</string>

    <string name="confirm">"Are you sure?"</string>

    <string name="tune_long_lead_sensitivity_desc">"Sensitivity lead, the higher it is, the more sensitive the response to the lead."</string>

    <string name="tune_path_offset_desc">"Increase to move the vehicle to the right, decrease to move it to the left."</string>
    <string name="tune_path_factor_desc">"If oversteer occurs in a corner, reduce it."</string>

    <string name="shell_create_prebuilt">"Create prebuilt"</string>
    <string name="shell_remove_prebuilt">"Remove prebuilt"</string>

    <string name="shell_git_reset_hard">"Git Reset"</string>
    <string name="shell_git_reset_hard_back_1">"Git Reset HEAD~1"</string>
    <string name="shell_git_pull">"Git Pull"</string>
    <string name="shell_git_change_branch">"Change Branch"</string>
    <string name="git_change_branch_desc">"Please select a branch (* indicates the current branch)"</string>

    <string name="shell_launch_android_settings">"System Settings"</string>
    <string name="shell_kill_android_settings">"Close System Settings"</string>

    <string name="shell_reset_calibration">"Reset Calibration"</string>
    <string name="shell_reset_liveparams">"Reset LiveParameters"</string>

    <string name="shell_remove_realdata">"Remove realdata"</string>
    <string name="shell_remove_videos">"Remove videos"</string>


    <string name="shell_flash_panda">"Flash Panda firmware"</string>
    <string name="shell_recover_panda">"Recover Panda"</string>
    <string name="shell_reboot">"Reboot"</string>
    <string name="shell_rebuild">"Clean &amp; Rebuild"</string>

    <string name="shell_launch_navdy_settings">"Navdy Settings"</string>

    <string name="shell_clear_dtc">"Clear dtc"</string>

    <string name="shell_soft_restart">"Soft Restart"</string>



    <string name="btn_ssh_key">"SSH Key"</string>
    <string name="btn_ssh_key_select_private_file">"Private file"</string>
    <string name="btn_ssh_key_select_public_file">"Public file(optional)"</string>
    <string name="btn_ssh_key_clear">"Clear"</string>

    <string name="ssh_password">"Password"</string>
    <string name="ssh_private_key">"Private key"</string>
    <string name="ssh_public_key">"Public key"</string>

    <string name="confirm_clear_ssh_key">"Are you sure you want to clear?"</string>

    <string name="eon_no_log">"EON has no log."</string>

    <string name="btn_sync_time">"Sync time"</string>

    <string name="tune_scc_v_cruise_factor">""</string>

    <string name="lat_indi_actuatorEffectiveness">"As effectiveness increases, actuation strength decreases
Too high: weak, sloppy lane centering, slow oscillation, can't follow high curvature, high steering error causes snappy corrections
Too low: overpower, saturation, jerky, fast oscillation, bang-bang control
Just right: Highest value able to maintain good lane centering."</string>
    <string name="lat_indi_timeConstant">"Exponential moving average of prior output steer
Too high: sloppy lane centering
Too low: noisy actuation, responds to every bump, maybe unable to maintain lane center due to rapid actuation
Just right: above noisy actuation and lane centering instability"</string>
    <string name="lat_indi_innerLoopGain">"Steer rate error gain
Too high: jerky oscillation in high curvature
Too low: sloppy, cannot accomplish desired steer angle
Just right: brief snap on entering high curvature"</string>
    <string name="lat_indi_outerLoopGain">"Steer error gain
Too high: twitchy hyper lane centering, oversteering
Too low: sloppy, all over lane
Just right: crisp lane centering"</string>

    <string name="tune_reset_all_format">"Reset %1$s"</string>

    <string name="not_support_ntune">"This repository does not support nTune."</string>

</resources>
